Fixed some text-align issues.

--- a/styles.scss
+++ b/styles.scss
@@ -250,7 +250,7 @@ body {
         &__title {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            text-align: center;
+            text-align: left;
         }
 
         &__paragraph {
@@ -307,17 +307,17 @@ body {
     padding: 4rem 1.5rem;
     max-width: 1200px;
     margin: 0 auto;
-    text-align: center;
 
     &__heading {
         font-size: 1.5rem;
         margin-bottom: 1rem;
-        text-align: center;
+        // text-align: left;
     }
 
     &__description {
         color: var(--secondary-color);
 
+        text-align: center;
         margin-bottom: 2rem;
         font-size: 1rem;
         line-height: 1.8;
@@ -358,6 +358,10 @@ body {
         &__heading {
             font-size: 2rem;
             margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        &__description {
             text-align: center;
         }
 
